--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.xj.cloud</groupId>
-	<artifactId>microservice-simple-provider-user</artifactId>
+	<artifactId>ProviderUser</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<!-- 引入spring boot的依赖 -->
