--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,9 +10,18 @@ spring:
     platform: h2
     schema: classpath:/db/schema.sql
     data: classpath:/db/data.sql
+  application:
+    name: ProviderUser
 logging:
   level:
     root: INFO
     org.hibernate: INFO
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.hibernate.type.descriptor.sql.BasicExtractor: TRACE
+eureka:
+  client:
+    serverUrl:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
+      
