--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,7 +21,7 @@ logging:
 eureka:
   client:
     serverUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://129.204.68.55:8761/eureka/
   instance:
     prefer-ip-address: true
       
